fix an overflow issue in the cart picker dropdown

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -69,7 +69,6 @@
   display: none;
   top: 110%;
   left: 0;
-  right: 0;
   background: #fff;
   pointer-events: none;
   margin: 0;
